--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generic Drug Development Knowledge Platform </title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GenericDev Hub</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background: #f6f8fa;
+        }
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #24292e;
+            border-bottom: 1px solid #e1e4e8;
+            padding-bottom: 10px;
+        }
+        .description {
+            color: #586069;
+        }
+        .links {
+            margin-top: 20px;
+        }
+        a {
+            color: #0366d6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to GenericDev Hub</h1>
+        <div class="description">
+            <p>This is the GitHub Pages site for the GenericDev Hub repository. Here you'll find documentation and resources related to our TypeScript-based development hub.</p>
+        </div>
+        <div class="links">
+            <p>
+                <strong>Useful Links:</strong><br>
+                • <a href="https://github.com/akas3j/GenericDev_Hub">View Repository</a><br>
+                • <a href="https://github.com/akas3j/GenericDev_Hub/issues">Issues</a>
+            </p>
+        </div>
+    </div>
+</body>
 </html>
