--- a/index.html
+++ b/index.html
@@ -6,53 +6,19 @@
     <title>GenericDev Hub</title>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background: #f6f8fa;
-        }
-        .container {
             max-width: 800px;
-            margin: 40px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin: 0 auto;
+            padding: 2rem;
+            color: #333;
         }
-        h1 {
-            color: #24292e;
-            border-bottom: 1px solid #e1e4e8;
-            padding-bottom: 10px;
-        }
-        .description {
-            color: #586069;
-        }
-        .links {
-            margin-top: 20px;
-        }
-        a {
-            color: #0366d6;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
+        h1 { color: #0366d6; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to GenericDev Hub</h1>
-        <div class="description">
-            <p>This is the GitHub Pages site for the GenericDev Hub repository. Here you'll find documentation and resources related to our TypeScript-based development hub.</p>
-        </div>
-        <div class="links">
-            <p>
-                <strong>Useful Links:</strong><br>
-                • <a href="https://github.com/akas3j/GenericDev_Hub">View Repository</a><br>
-                • <a href="https://github.com/akas3j/GenericDev_Hub/issues">Issues</a>
-            </p>
-        </div>
-    </div>
+    <h1>Welcome to GenericDev Hub</h1>
+    <p>This site is hosted using GitHub Pages. The repository contains TypeScript code and development resources.</p>
+    <p>Visit the <a href="https://github.com/akas3j/GenericDev_Hub">GitHub repository</a> to view the source code.</p>
 </body>
 </html>
