--- a/index.html
+++ b/index.html
@@ -5,20 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GenericDev Hub</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            color: #333;
+        :root {
+            --primary-color: #0366d6;
+            --secondary-color: #24292e;
+            --bg-light: #f6f8fa;
+            --text-color: #24292e;
+            --border-color: #e1e4e8;
         }
-        h1 { color: #0366d6; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background: var(--bg-light);
+        }
+        .header {
+            background: var(--secondary-color);
+            color: white;
+            padding: 2rem 0;
+            margin-bottom: 2rem;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+        .header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+        }
+        .header p {
+            opacity: 0.9;
+        }
+        main {
+            padding: 0 2rem;
+        }
+        .card {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 2rem;
+            margin-bottom: 2rem;
+        }
+        h2 {
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 2px solid var(--border-color);
+        }
+        .links {
+            list-style: none;
+        }
+        .links li {
+            margin-bottom: 1rem;
+            padding-left: 1.5rem;
+            position: relative;
+        }
+        .links li::before {
+            content: '→';
+            position: absolute;
+            left: 0;
+            color: var(--primary-color);
+        }
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .footer {
+            text-align: center;
+            padding: 2rem;
+            color: #666;
+            margin-top: 3rem;
+            border-top: 1px solid var(--border-color);
+        }
+        @media (max-width: 768px) {
+            .container, main {
+                padding: 0 1rem;
+            }
+            .header h1 {
+                font-size: 2rem;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to GenericDev Hub</h1>
-    <p>This site is hosted using GitHub Pages. The repository contains TypeScript code and development resources.</p>
-    <p>Visit the <a href="https://github.com/akas3j/GenericDev_Hub">GitHub repository</a> to view the source code.</p>
+    <header class="header">
+        <div class="container">
+            <h1>Welcome to GenericDev Hub</h1>
+            <p>A TypeScript-based Development Hub</p>
+        </div>
+    </header>
+
+    <main class="container">
+        <section class="card">
+            <h2>About</h2>
+            <p>This is the GitHub Pages site for the GenericDev Hub repository. Here you'll find documentation and resources related to our TypeScript-based development hub.</p>
+        </section>
+
+        <section class="card">
+            <h2>Quick Links</h2>
+            <ul class="links">
+                <li><a href="https://github.com/akas3j/GenericDev_Hub">Repository Home</a> - View source code and contribute</li>
+                <li><a href="https://github.com/akas3j/GenericDev_Hub/issues">Issues</a> - Report bugs or request features</li>
+                <li><a href="https://github.com/akas3j/GenericDev_Hub/pulls">Pull Requests</a> - Contribute to the project</li>
+                <li><a href="https://github.com/akas3j/GenericDev_Hub/wiki">Documentation</a> - Read the documentation</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>Last updated: 2025-11-03 | Maintained by <a href="https://github.com/akas3j">akas3j</a></p>
+        </div>
+    </footer>
 </body>
 </html>
